--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.0",
     "@nuxt/kit": "^3.2.2",
     "defu": "^6.1.2",
     "naive-ui": "^2.34.3",
