--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   "dependencies": {
     "@iconify/vue": "^4.1.0",
     "@nuxt/kit": "^3.2.2",
-    "defu": "^6.1.2",
     "naive-ui": "^2.34.3",
     "unplugin-auto-import": "^0.14.3",
     "unplugin-vue-components": "^0.24.0"
@@ -49,8 +48,8 @@
     "changelogen": "^0.4.1",
     "eslint": "^8.34.0",
     "nuxt": "^3.2.2",
-    "vitest": "^0.28.5",
-    "semantic-release": "^20.1.0"
+    "semantic-release": "^20.1.0",
+    "vitest": "^0.28.5"
   },
   "repository": {
     "type": "git",
