--- a/demo/package.json
+++ b/demo/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^0.2.3",
     "nuxt": "^3.2.2"
   },
   "dependencies": {
