--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
   "dependencies": {
     "@iconify/vue": "^4.1.0",
     "@nuxt/kit": "^3.2.2",
-    "naive-ui": "^2.34.3",
-    "unplugin-auto-import": "^0.14.3",
-    "unplugin-vue-components": "^0.24.0"
+    "naive-ui": "^2.34.3"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
