--- a/demo/package.json
+++ b/demo/package.json
@@ -8,10 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.2.3",
-    "nuxt": "^3.2.2"
+    "@nuxt/devtools": "^0.2.5",
+    "nuxt": "^3.2.3"
   },
   "dependencies": {
-    "@bg-dev/nuxt-naiveui": "^1.0.0-beta.5"
+    "@bg-dev/nuxt-naiveui": "file:../package"
   }
 }
