--- a/demo/package.json
+++ b/demo/package.json
@@ -8,9 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.6.0",
     "nuxt": "^3.2.3"
   },
   "dependencies": {
-    "@bg-dev/nuxt-naiveui": "^1.0.0-beta.13"
+    "@bg-dev/nuxt-naiveui": "file:../package"
   }
 }
