--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@iconify/vue": "^4.1.0",
     "@nuxt/kit": "^3.2.2",
+    "defu": "^6.1.2",
     "naive-ui": "^2.34.3"
   },
   "devDependencies": {
