--- a/demo/package.json
+++ b/demo/package.json
@@ -8,10 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^0.2.5",
     "@nuxtjs/tailwindcss": "^6.6.0",
-    "nuxt": "^3.2.3"
+    "nuxt": "^3.3.1"
   },
   "dependencies": {
-    "@bg-dev/nuxt-naiveui": "^1.0.0-beta.16"
+    "@bg-dev/nuxt-naiveui": "file:../package"
   }
 }
