--- a/demo/package.json
+++ b/demo/package.json
@@ -8,11 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.2.5",
-    "@nuxtjs/tailwindcss": "^6.6.0",
+    "@nuxtjs/tailwindcss": "^6.6.4",
     "nuxt": "^3.3.1"
   },
   "dependencies": {
-    "@bg-dev/nuxt-naiveui": "^1.0.0-beta.17"
+    "@bg-dev/nuxt-naiveui": "file:../package"
   }
 }
