--- a/demo/package.json
+++ b/demo/package.json
@@ -12,6 +12,6 @@
     "nuxt": "^3.3.1"
   },
   "dependencies": {
-    "@bg-dev/nuxt-naiveui": "file:../package"
+    "@bg-dev/nuxt-naiveui": "^1.0.0-beta.23"
   }
 }
