--- a/demo/package.json
+++ b/demo/package.json
@@ -8,10 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.6.4",
+    "@nuxtjs/tailwindcss": "^6.6.5",
     "nuxt": "^3.3.2"
   },
   "dependencies": {
-    "@bg-dev/nuxt-naiveui": "^1.0.0-beta.23"
+    "@bg-dev/nuxt-naiveui": "^1.0.6"
   }
 }
