--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bg-dev/nuxt-naiveui",
-  "version": "1.3.1",
+  "version": "1.3.1-edge",
   "description": "Naive UI module for Nuxt 3",
   "author": "Becem Gharbi",
   "keywords": [
@@ -52,6 +52,6 @@
   "repository": "https://github.com/becem-gharbi/nuxt-naiveui.git",
   "publishConfig": {
     "access": "public",
-    "tag": "latest"
+    "tag": "edge"
   }
 }
