--- a/docs/content/2.components/_dir.yml
+++ b/docs/content/2.components/_dir.yml
@@ -1,3 +1,3 @@
-icon: ph:gear
+icon: tabler:components
 title: Components
-navigation.redirect: /components/naive-config
+navigation.redirect: /components/import
