--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@iconify/vue": "^4.1.1",
     "@nuxt/kit": "^3.8.1",
     "defu": "^6.1.3",
+    "js-cookie": "^3.0.5",
     "naive-ui": "^2.35.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@nuxt/schema": "^3.8.1",
     "@nuxt/test-utils": "^3.8.1",
     "@nuxtjs/tailwindcss": "^6.9.4",
+    "@types/js-cookie": "^3.0.6",
     "changelogen": "^0.5.5",
     "eslint": "^8.53.0",
     "nuxt": "^3.8.1",
