--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bg-dev/nuxt-naiveui",
-  "version": "1.7.2",
+  "version": "1.7.3",
   "description": "Naive UI module for Nuxt 3",
   "author": "Becem Gharbi",
   "keywords": [
@@ -52,7 +52,7 @@
     "vitest": "^0.34.6"
   },
   "repository": {
-    "url": "https://github.com/becem-gharbi/nuxt-naiveui.git"
+    "url": "git+https://github.com/becem-gharbi/nuxt-naiveui.git"
   },
   "publishConfig": {
     "access": "public",
