--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/js-cookie": "^3.0.6",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
-    "nuxt": "^3.9.3",
+    "nuxt": "npm:nuxt-nightly@latest",
     "vitest": "^1.2.1"
   },
   "repository": {
