--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.1.1",
-    "@nuxt/kit": "^3.9.3",
+    "@nuxt/kit": "^3.10.0",
     "defu": "^6.1.4",
     "js-cookie": "^3.0.5",
     "naive-ui": "^2.37.3"
@@ -42,13 +42,13 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.5",
-    "@nuxt/schema": "^3.9.3",
-    "@nuxt/test-utils": "^3.10.0",
+    "@nuxt/schema": "^3.10.0",
+    "@nuxt/test-utils": "^3.11.0",
     "@types/js-cookie": "^3.0.6",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
-    "nuxt": "npm:nuxt-nightly@latest",
-    "vitest": "^1.2.1"
+    "nuxt": "^3.10.0",
+    "vitest": "^1.2.2"
   },
   "repository": {
     "url": "git+https://github.com/becem-gharbi/nuxt-naiveui.git"
