--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bg-dev/nuxt-naiveui",
-  "version": "1.10.0",
+  "version": "1.10.1",
   "description": "Naive UI module for Nuxt 3",
   "author": "Becem Gharbi",
   "keywords": [
@@ -27,10 +27,11 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
-    "release": "nuxi typecheck && npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run typecheck && npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "typecheck": "nuxi typecheck"
   },
   "dependencies": {
     "@iconify/vue": "^4.1.1",
