--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typecheck": "nuxi typecheck"
   },
   "dependencies": {
+    "@ant-design/colors": "^7.0.2",
     "@iconify/vue": "^4.1.1",
     "@nuxt/kit": "^3.11.1",
     "defu": "^6.1.4",
