chore(pkg): export utils

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       "types": "./dist/types.d.ts",
       "import": "./dist/module.mjs",
       "require": "./dist/module.cjs"
+    },
+    "./utils": {
+      "types": "./dist/runtime/utils/index.d.ts",
+      "import": "./dist/runtime/utils/index.mjs"
     }
   },
   "main": "./dist/module.cjs",
