--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       "types": "./dist/types.d.ts",
       "import": "./dist/module.mjs",
       "require": "./dist/module.cjs"
+    },
+    "./utils": {
+      "types": "./dist/runtime/utils/index.d.ts",
+      "import": "./dist/runtime/utils/index.mjs"
     }
   },
   "main": "./dist/module.cjs",
@@ -35,6 +39,7 @@
     "typecheck": "nuxi typecheck"
   },
   "dependencies": {
+    "@ant-design/colors": "^7.0.2",
     "@iconify/vue": "^4.1.1",
     "@nuxt/kit": "^3.11.1",
     "defu": "^6.1.4",
