--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bg-dev/nuxt-naiveui",
   "version": "1.13.1",
-  "description": "Naive UI module for Nuxt",
+  "description": "Unofficial Naive UI module for Nuxt",
   "homepage": "https://nuxt-naiveui.bg.tn",
   "author": "Becem Gharbi",
   "keywords": [
