test: add color mode tests
commit fef4b90cc50337bb865c0e0c126710bc2c62933d
Author: becem-gharbi <becem.gharbi@live.com>
Date:   Tue May 28 20:38:23 2024 +0100

    test: add color-mode test

commit 29cb9716b55864352d8cd632ad979f3a0dfd141b
Author: becem-gharbi <becem.gharbi@live.com>
Date:   Tue May 28 18:45:31 2024 +0100

    test: add color mode test

commit 7b7eac9904d4a904e1bba90dcf62b662d6bb7d28
Author: becem-gharbi <becem.gharbi@live.com>
Date:   Tue May 28 16:29:31 2024 +0100

    chore: clear playground

commit 6df5c7903d7eaa30cb0dbdd2b283e449d4388db2
Author: becem-gharbi <becem.gharbi@live.com>
Date:   Tue May 28 16:09:57 2024 +0100

    test: configure dev server

commit 9de40a2f4c53959f675b60663d7afb31595f900b
Author: becem-gharbi <becem.gharbi@live.com>
Date:   Tue May 28 15:06:45 2024 +0100

    test: install playwright

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
-    "release": "npm run typecheck && npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run test:headed && npm run typecheck && npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
     "typecheck": "nuxi typecheck"
   },
   "dependencies": {
@@ -50,13 +50,13 @@
     "@nuxt/eslint-config": "^0.3.12",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.11.1",
-    "@nuxt/test-utils": "^3.12.0",
+    "@playwright/test": "^1.44.1",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.12.12",
     "changelogen": "^0.5.5",
     "eslint": "^9.2.0",
     "nuxt": "^3.11.1",
-    "typescript": "^5.4.5",
-    "vitest": "^1.4.0"
+    "typescript": "^5.4.5"
   },
   "repository": {
     "url": "git+https://github.com/becem-gharbi/nuxt-naiveui.git"
@@ -64,5 +64,6 @@
   "publishConfig": {
     "access": "public",
     "tag": "latest"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
