--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@nuxt/eslint-config": "^0.3.12",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.11.1",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "@playwright/test": "^1.44.1",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.12",
