chore: fix test scripts
Apply NODE_ENV=production

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "dev:build:ssr": "nuxi build playground",
     "dev:build:spa": "cross-env NUXT_SSR=false nuxi build playground",
     "test": "playwright test",
-    "test:prod:ssr": "cross-env NODE_ENV=production && npm run dev:build:ssr && npm run test",
-    "test:prod:spa": "cross-env NODE_ENV=production && npm run dev:build:spa && npm run test",
+    "test:prod:ssr": "npm run dev:build:ssr && cross-env NODE_ENV=production npm run test",
+    "test:prod:spa": "npm run dev:build:spa && cross-env NODE_ENV=production npm run test",
     "test:prod": "npm run test:prod:ssr && npm run test:prod:spa",
     "lint": "eslint .",
     "typecheck": "nuxi typecheck",
