chore: bump version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bg-dev/nuxt-naiveui",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0-beta.1",
   "description": "Unofficial Naive UI module for Nuxt",
   "homepage": "https://nuxt-naiveui.bg.tn",
   "author": "Becem Gharbi",
@@ -36,7 +36,7 @@
     "typecheck": "nuxi typecheck",
     "prepack": "nuxt-module-build",
     "release:pre": "npm run typecheck && npm run lint && npm run prepack",
-    "release": "npm run release:pre && npm run test:prod && changelogen --r 2.0.0-beta.0 --publishTag v2 --release && npm publish && git push --follow-tags",
+    "release": "npm run release:pre && npm run test:prod && changelogen --r 2.0.0-beta.1 --publishTag v2 --release && npm publish && git push --follow-tags",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -69,7 +69,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "tag": "v2"
+    "tag": "next"
   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
