--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "@ant-design/colors": "^7.1.0",
     "@iconify/vue": "^4.1.2",
-    "@nuxt/kit": ">=3.10.0 <3.13.2",
+    "@nuxt/kit": "^3.13.2",
     "defu": "^6.1.4",
     "js-cookie": "^3.0.5",
     "naive-ui": "^2.40.1"
@@ -56,7 +56,7 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.13",
     "@nuxt/module-builder": "^0.8.1",
-    "@nuxt/schema": ">=3.10.0 <3.13.2",
+    "@nuxt/schema": "^3.13.2",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@playwright/test": "^1.45.3",
     "@types/js-cookie": "^3.0.6",
@@ -64,7 +64,7 @@
     "changelogen": "^0.5.5",
     "cross-env": "^7.0.3",
     "eslint": "^9.7.0",
-    "nuxt": ">=3.10.0 <3.13.2",
+    "nuxt": "^3.14.159",
     "typescript": "^5.5.4",
     "vitepress": "^1.3.1"
   },
