--- a/package.json
+++ b/package.json
@@ -46,27 +46,27 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@ant-design/colors": "^7.1.0",
-    "@iconify/vue": "^4.1.2",
-    "@nuxt/kit": "^3.13.2",
+    "@ant-design/colors": "^7.2.0",
+    "@iconify/vue": "^4.3.0",
+    "@nuxt/kit": "^3.15.3",
     "defu": "^6.1.4",
     "js-cookie": "^3.0.5",
-    "naive-ui": "^2.40.1"
+    "naive-ui": "^2.41.0"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.3.13",
-    "@nuxt/module-builder": "^0.8.1",
-    "@nuxt/schema": "^3.13.2",
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "@playwright/test": "^1.45.3",
+    "@nuxt/eslint-config": "^0.7.5",
+    "@nuxt/module-builder": "^0.8.4",
+    "@nuxt/schema": "^3.15.3",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@playwright/test": "^1.50.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.14.12",
-    "changelogen": "^0.5.5",
+    "@types/node": "^22.10.10",
+    "changelogen": "^0.5.7",
     "cross-env": "^7.0.3",
-    "eslint": "^9.7.0",
-    "nuxt": "^3.14.159",
-    "typescript": "^5.5.4",
-    "vitepress": "^1.3.1"
+    "eslint": "^9.19.0",
+    "nuxt": "^3.15.3",
+    "typescript": "^5.7.3",
+    "vitepress": "^1.6.3"
   },
   "repository": {
     "url": "git+https://github.com/becem-gharbi/nuxt-naiveui.git"
@@ -75,5 +75,5 @@
     "access": "public",
     "tag": "latest"
   },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+  "packageManager": "yarn@1.22.22"
 }
