--- a/package.json
+++ b/package.json
@@ -48,23 +48,23 @@
   "dependencies": {
     "@ant-design/colors": "^7.2.0",
     "@iconify/vue": "^4.3.0",
-    "@nuxt/kit": "^3.15.3",
+    "@nuxt/kit": "^3.15.4",
     "defu": "^6.1.4",
     "js-cookie": "^3.0.5",
     "naive-ui": "^2.41.0"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.7.5",
+    "@nuxt/eslint-config": "^1.1.0",
     "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.15.3",
+    "@nuxt/schema": "^3.15.4",
     "@nuxtjs/tailwindcss": "^6.13.1",
-    "@playwright/test": "^1.50.0",
+    "@playwright/test": "^1.50.1",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.13.4",
     "changelogen": "^0.5.7",
     "cross-env": "^7.0.3",
-    "eslint": "^9.19.0",
-    "nuxt": "^3.15.3",
+    "eslint": "^9.20.1",
+    "nuxt": "3.15.4",
     "typescript": "^5.7.3",
     "vitepress": "^1.6.3"
   },
